working quiz generation to storyblok then playing at frontend

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="app">
         <header>
-            <h1>🪙 Bitcoin Quiz Flow</h1>
+            <h1>Bitcoin Quiz Flow</h1>
             <p>Test your Bitcoin knowledge with AI-generated quizzes</p>
         </header>
         
